Second change has been added to the first test case

--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        This is a test file
+        This is a test file. Now there also is a small change.
     </body>
 </html>
