three files modified with headings

--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
         </title>
     </head>
     <body>
+        <h1>Heading 1</h1>
         This is a test file. Now there also is a small change.
     </body>
 </html>
