--- a/test2.html
+++ b/test2.html
@@ -6,6 +6,7 @@
         </title>
     </head>
     <body>
+        <h1>Heading2</h1>
         This is the second test file. Do not add this to the repository.
     </body>
 </html>
