--- a/test3.html
+++ b/test3.html
@@ -6,6 +6,9 @@
         </title>
     </head>
     <body>
+        <h1>
+            Heading3
+        </h1>
         This is the third test page.
     </body>
 </html>
