--- a/test3.html
+++ b/test3.html
@@ -9,6 +9,7 @@
         <h1>
             Heading3
         </h1>
+        <h2> extra heading </h2>
         This is the third test page.
     </body>
 </html>
