--- a/test3.html
+++ b/test3.html
@@ -10,6 +10,7 @@
             Heading3
         </h1>
         <h2> extra heading </h2>
+        <h4>Test for merge??</h4>
         This is the third test page.
     </body>
 </html>
