--- a/test3.html
+++ b/test3.html
@@ -6,12 +6,10 @@
         </title>
     </head>
     <body>
-        <h1>
+        <h1 style="color:blue;">
             Heading3
         </h1>
         <h2> extra heading </h2>
-        <h3 style="color:blue;"> another extra heading </h3>
-        <h4>Test for merge??</h4>
         This is the third test page.
     </body>
 </html>
