move style properties

--- a/test3.html
+++ b/test3.html
@@ -4,9 +4,14 @@
         <title>
             Test3
         </title>
+        <style>
+            h1 {
+                color:blue;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color:blue;">
+        <h1>
             Heading3
         </h1>
         <h2> extra heading </h2>
