--- a/test3.html
+++ b/test3.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1 style="color:blue;">
-            Heading3
+            Heading3!
         </h1>
         <h2> extra heading </h2>
         This is the third test page.
