--- a/test3.html
+++ b/test3.html
@@ -7,6 +7,7 @@
         <style>
             h1 {
                 color:blue;
+                background-color: red;
             }
         </style>
     </head>
